Split document into sub files and use include

--- a/proposal.tex
+++ b/proposal.tex
@@ -68,13 +68,7 @@
   \titlepage
 \end{frame}   %-----------------------------%
 
-\section*{}
-\subsection*{Introduction}  
-
-\begin{frame} %-----------------------------%
-\frametitle{Title of Slide} % small satellites
-
-\end{frame}   %-----------------------------%
+\include{tex/introduction}
 
 
 
