Add tex root header

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../proposal.tex
+
 \section*{}
 \subsection*{Introduction}  
 
@@ -11,7 +13,7 @@ Low thrust propulsion systems
 
 \end{frame}   %-----------------------------%
 
-\begin{frame}[t]\frametitle{Low-thrust Propulsion}
+\begin{frame}[t]\frametitle{Background - Low-thrust Propulsion}
     Electric propulsion systems
 
     Previous spacecraft 
@@ -28,8 +30,3 @@ Why do spacecraft need to operate in their vicinity
 
 \end{frame}
 
-\begin{frame}[t]{Challenges}
-    
-
-
-\end{frame}
