Reword notes on background

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,20 +3,18 @@
 \section*{}
 \subsection*{Introduction}  
 
-\begin{frame}{Background - Asteroids} %-----------------------------%
+\begin{frame}{Background } %-----------------------------%
+
+Discuss some history of missions to asteroids
 
 Missions to asteroids
-
-
-Low thrust propulsion systems
-
 
 \end{frame}   %-----------------------------%
 
 \begin{frame}[t]\frametitle{Background - Low-thrust Propulsion}
-    Electric propulsion systems
+    Low thrust propulsion systems
 
-    Previous spacecraft 
+    Electric propulsion systems
 
     Differences between impulsive/non-impulsive systems
 \end{frame}
