--- a/proposal.tex
+++ b/proposal.tex
@@ -69,6 +69,9 @@
 \end{frame}   %-----------------------------%
 
 \include{tex/introduction}
+\include{tex/motivation}
+\include{tex/thesis_statement}
+\include{tex/challenges}
 
 
 
