Add macros used in previous presentation

--- a/proposal.tex
+++ b/proposal.tex
@@ -4,6 +4,9 @@
 \usefonttheme{serif}
 \usepackage{presentation_packages}
 
+\DeclareSIUnit\year{yr} % 2016AAS
+\newcommand{\vs}{\vspace{0.3cm}} % 2016ACC
+
 \newcommand{\hilight}[1]{\colorbox{green}{#1}}
 
 \definecolor{mygray}{gray}{0.9}
