Remove outdated \bf

--- a/proposal.tex
+++ b/proposal.tex
@@ -38,7 +38,7 @@
 } \setbeamercolor{box}{fg=black,bg=yellow}
 
 
-\title[Short Title]{\large\bf  Long Title}
+\title[Short Title]{\large\textbf{Long Title}}
 
 \author{\vspace*{-0.3cm}}
 
@@ -53,10 +53,9 @@
    
 \institute{
 	\footnotesize
-	{\normalsize\bf{Shankar Kulumani}}\\
 	Ph.D. student\\
 	\vspace*{0.2cm}
-  	\bf{Department of Mechanical \& Aerospace Engineering}\\ \vspace*{0.5cm}
+  	\textbf{Department of Mechanical \& Aerospace Engineering}\\ \vspace*{0.5cm}
  	\begin{figure} %figure%
        	\includegraphics[width=0.75\textwidth]{gw_txh_2cs_pos}
   	\end{figure}
