Add normal author command

--- a/proposal.tex
+++ b/proposal.tex
@@ -40,7 +40,7 @@
 
 \title[Short Title]{\large\textbf{Long Title}}
 
-\author{\vspace*{-0.3cm}}
+\author{Shankar Kulumani}
 
 %\institute{\footnotesize
 %{\normalsize Shankar Kulumani}\vspace*{0.2cm}\\
