Fix path to images

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -104,10 +104,10 @@
 \begin{figure} 
     \centering  
     \begin{subfigure}[b]{0.5\textwidth} 
-        \includegraphics[height=0.35\textheight]{hubble}
+        \includegraphics[height=0.35\textheight]{figures/2016ACC/hubble.jpg}
     \end{subfigure}~\quad~
     \begin{subfigure}[b]{0.5\textwidth} 
-        \includegraphics[height=0.35\textheight]{ors-1}
+        \includegraphics[height=0.35\textheight]{figures/2016ACC/ors-1.png}
     \end{subfigure}
 \end{figure}
 }
