Add motivation section

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -1,5 +1,8 @@
 %!TEX root = ../proposal.tex
 
+\section*{}
+\subsection*{Motivation}  
+
 \begin{frame} %-----------------------------%
 \frametitle{Motivation - Small Satellites} % small satellites
     \begin{itemize}
