Remove float environments, table and figure

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -12,7 +12,7 @@
                 \item Prohibitive launch costs and manifest scheduling
             \end{itemize}
             \pause
-        \begin{table}
+                    
         \begin{tabular}{l | c | c }
             Vehicle & LEO Capacity (\si{\kilogram}) & LEO Cost per \si{\kilogram} \\
             \hline \hline
@@ -21,7 +21,7 @@
             Falcon 9 & \num{13150} & \$ \num{4654} \\
             Falcon 9 Heavy & \num{53000} & \$ \num{1698}
         \end{tabular}
-        \end{table}
+        
         \item Small spacecraft enable cost effective and rapid development
     
             \begin{itemize}
@@ -104,14 +104,9 @@
     \end{itemize}
 \end{itemize}
 \visible<2->{
-\begin{figure} 
-    \centering  
-    \begin{subfigure}[b]{0.5\textwidth} 
-        \includegraphics[height=0.35\textheight]{figures/2016ACC/hubble.jpg}
-    \end{subfigure}~\quad~
-    \begin{subfigure}[b]{0.5\textwidth} 
-        \includegraphics[height=0.35\textheight]{figures/2016ACC/ors-1.png}
-    \end{subfigure}
-\end{figure}
+\begin{center}
+    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/hubble.jpg}~
+    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/ors-1.png}
+\end{center}
 }
 \end{frame}   %-----------------------------%
