Add sizing options for images

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -74,9 +74,9 @@
 \end{itemize}
 
 \begin{center}
-    \includegraphics[height=0.5\textheight]{figures/patriot_plume.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/patriot_plume.jpg}
     ~
-    \includegraphics[height=0.5\textheight]{figures/deepspace1.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/deepspace1.jpg}
 \end{center}
 \end{frame}   %-----------------------------%
 
@@ -88,9 +88,9 @@
 \end{itemize}    
 
 \begin{center}
-    \includegraphics[height=0.5\textheight]{figures/2016AAS/near_mos_20001203_full.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/near_mos_20001203_full.jpg}
     ~
-    \includegraphics[height=0.5\textheight]{figures/2016AAS/Itokawa8_hayabusa_1210.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/Itokawa8_hayabusa_1210.jpg}
 \end{center}
 \end{frame}
 
