Add some additional files for presentation

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,7 @@
  	\begin{figure} %figure%
        	\includegraphics[width=0.75\textwidth]{gw_txh_2cs_pos}
   	\end{figure}
-}
+}{}
 \date{}
 
 \includeonly{tex/motivation}
@@ -75,8 +75,13 @@
 \include{tex/introduction}
 \include{tex/motivation}
 \include{tex/thesis_statement}
+\include{tex/lit_review}
 \include{tex/challenges}
-
+\include{tex/prior_work}
+\include{tex/future_work}
+\include{tex/timeline}
+\include{tex/conclusion}
+\include{tex/backup}
 
 
 
