--- a/tex/lit_review.tex
+++ b/tex/lit_review.tex
@@ -1,19 +1,27 @@
 %!TEX root = ../proposal.tex
 
-\begin{frame}[t]{Research Objective}
-    
-    Thesis statement
 
-    Entire dissertation should support and prove this statement
+\begin{frame}[t]\frametitle{Low-thrust manuevers}
+    
+    orbital manuevers tend to focus on impulsive assumption
+
+    optimization problems usually solved using direct methods
+
+    long-durations require accurate numerical propogation techniques - typical runge kutta methods are prone to energy variances
 
 \end{frame}
 
-\begin{frame}[t]\frametitle{Previous work}
+\begin{frame}[t]\frametitle{Spacecraft operations around asteroids}
+    gravity model of asteroids usually truncacted/approximated
+
+    typically ignore the attitude dynamics
+
+\end{frame}
+
+\begin{frame}[t]\frametitle{Constrained Attitude Control}
     
-    Challenges of previous work
+Usually use optimization/path planning approaches which are computationally intensive
 
-    Literature review
-
-    Highlight holes in the current research - where my thesis statement fits
+Frequently use attitude paramterizations
 
 \end{frame}
