Add potential thesis statement

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -1,7 +1,27 @@
 %! TEX ROOT = ../proposal.tex
 
-% THESIS STATEMENT
+\begin{frame}[t]{Research Objective}
+    
+    Thesis statement
 
+    Entire dissertation should support and prove this statement
+
+\end{frame}
+
+% THESIS STATEMENT
+\begin{frame}{Proposed research}
+    \begin{itemize}
+        \item Geometric mechanics enables the novel use low-thrust propulsion for operations about asteroids
+        \begin{itemize}     
+            \item Exploit the natural dynamics through \Poincare sections and reachability
+            \item Variational integrators for long duration accuracy
+            \item Accurate system models using \( \SE \)
+            \item Globally stable attitude controllers in the presence of obstacles
+        \end{itemize}
+    \end{itemize}
+\end{itemize}
+
+\end{frame}
 \begin{frame}{Proposed Approach} % -----------------------------------%
   \begin{itemize}
       \item \Emph{Reachability set} on \Poincare section allows for systematic transfer design
