--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -9,6 +9,110 @@ Show how it supports and solves some of the issues mentioned in the challenges
 Quick summary of previous research
 \end{frame}
 
+\begin{frame}{Proposed Approach} % -----------------------------------%
+  \begin{itemize}
+      \item \Emph{Reachability set} on \Poincare section allows for systematic transfer design
+        \begin{itemize}
+            \item Transfer design on lower dimensional subspace
+            \item Simple method to incorporate effects of low-thrust 
+            \item Avoids the issue of determining initial conditions
+        \end{itemize}
+        \pause
+      \item Extension of previous work in planar three-body problem     
+  \end{itemize}
+
+  \note[itemize]{
+    \item Reachability set avoids the need to pick initial conditions
+    \item We compute on a lower dimensional surface
+  }
+\end{frame} %--------------------------------------%
+
+\begin{frame}{\Poincare map}
+\begin{itemize}
+    \item Intersection of a periodic orbit with a lower dimensional subspace, called the \Poincare section
+    \pause
+        \begin{itemize}
+            \item Can be considered a discrete map 
+        \end{itemize}
+        \pause
+    \item Useful for investigating the stability and structure 
+    \pause
+    \item Define a \Poincare section \( \Sigma \) 
+        \begin{itemize}
+            \item Used for initial and target periodic orbits
+            \item Subspace for the \Emph{reachability set}
+        \end{itemize}
+\end{itemize}
+
+\begin{align*}
+    \Sigma = \braces{\parenth{x, \dot{x}, z, \dot{z}} | y(t_f) = 0 }
+\end{align*}
+
+\end{frame}
+
+\begin{frame}{Reachability Set}
+
+\begin{itemize}
+    \item Set of states achievable from a given initial condition over fixed \( t_f \) s.t. maximum control constraint
+    \begin{align*}
+        R( \vecbf{x}_0, \mathcal{U} , t_f) = \braces{ \vecbf{x}_f \subseteq \mathcal{X} | \exists \vecbf{u} \in \mathcal{U}, \vecbf{x}(t_f) = \vecbf{x}_f }
+    \end{align*}
+    \pause
+    \item Directly derivable from optimal control
+    \item Frequently used for safety planning, e.g. air traffic collision avoidance
+    \pause
+    \item We extend its use to the design of spacecraft transfers
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Reachability Set on \Poincare section} % -----------------------------------%
+
+\begin{itemize}
+    \item Generate the reachability set on a \Poincare section
+    \[
+        \Sigma = \braces{\parenth{x, \dot{x}, z, \dot{z}} | y(t_f) = 0 }
+    \]
+    \item Control input is chosen to enlarge the reachable set
+\end{itemize}
+\pause
+\begin{figure}
+    \centering
+    \begin{scaletikzpicturetowidth}{0.4\textwidth}
+    \begin{tikzpicture}[scale=\tikzscale]
+        \coordinate [label=left:\textcolor{black}{\large \(\vecbf{x}_0\)}] (x0) at (-1,-2);
+        \coordinate [label=below:\textcolor{black}{\large  \(\vecbf{x}_n\)}] (xn) at (1,1);
+        \coordinate [label=left:\textcolor{black}{\large  \(\Sigma\)}] (sigma) at (-4,3);
+        %\coordinate [label=below:\textcolor{black}{\large  \(P(\vec{x})\)}] (P) at (0,-3.5);
+        % define the path of the flow with coordinates
+        \coordinate [label=right:\textcolor{black}{}] (f1) at (5,-2);
+        \coordinate [label=below:\textcolor{black}{\large  \(\psi(t,\vecbf{x}_0)\)}] (f2) at (2,-5);
+        \coordinate [label=right:\textcolor{black}{}] (f3) at (-4,-4);
+        \coordinate [label=right:\textcolor{black}{}] (f4) at (-4,-1);
+        
+    %   \draw[help lines] (-10,-10) grid (10,10); %grid
+        \filldraw [black] (x0) circle [radius=3pt];
+        \filldraw [black] (xn) circle [radius=3pt];
+    
+        \draw [ultra thick,black,->-](x0) to[out=20,in=90,distance=2cm] (f1) to[out=-90,in=0,distance=2cm] (f2) to[out=180,in=-45,distance=2cm] (f3) to[out=135,in=-135,distance=2cm] (f4) ;
+        \draw [ultra thick, black,dashed,->] (f4) to[out=45,in=180,distance=1cm] ($(xn)-(2,0)$);
+        
+        \draw [ultra thick] plot [smooth cycle, tension=0.1, rotate=5] coordinates { (-4,-3) (4,-3) (4,3) (-4,3) };
+    
+        \draw [thick,dashed] (xn) circle [radius=2cm]; % reachability set
+    
+        \draw [thick,->] (xn) -- ($(xn) + (2.5,0)$);
+        \draw [thick,rotate=45,->] (xn) -- ($(xn) + (2.5,0)$);
+        \draw ($(xn) + (1,0)$) arc [start angle=0,end angle=45, radius=1];
+        \node [draw=none] at (2.8,1.5) {\large \(\phi_d\)};
+        \draw [decorate,decoration={brace,amplitude=5pt},rotate=45] (xn) -- ($(xn) + (2,0)$);
+        \node [draw=none] at ($ (xn) + (0,1) $) {\large \( J \)};
+    \end{tikzpicture}
+    \end{scaletikzpicturetowidth}
+\end{figure}
+
+\end{frame} %--------------------------------------%
+
 % Intro to the reachability idea
 \begin{frame} %-----------------------------%
 \frametitle{Reachability Set}
