Outline for proposed timeline

--- a/tex/timeline.tex
+++ b/tex/timeline.tex
@@ -1,2 +1,20 @@
 %! TEx Root = ../proposal.tex
 
+\begin{frame}[t]\frametitle{Proposed Timeline}
+    
+\begin{itemize}
+    \item Future conference paper
+    \item Journal Submissions
+    \item Expected progress/tasks required for completion
+    \begin{itemize}
+        \item Derivation of coupled equations of motion
+        \item Investigation of dynamic enviornment of coupled problem
+        \item again look at the coupled translational/attitude obstacle problem
+        \item stability analysis
+        \item full mission scenario generation (orbital manuevers around asteroid to landing)
+        \item writing dissertation
+    \end{itemize}
+    \item Dissertation/Graduation Expectation
+\end{itemize}
+
+\end{frame}
