--- a/proposal.tex
+++ b/proposal.tex
@@ -57,7 +57,7 @@
 	\vspace*{0.2cm}
   	\textbf{Department of Mechanical \& Aerospace Engineering}\\ \vspace*{0.5cm}
  	\begin{figure} %figure%
-       	\includegraphics[width=0.75\textwidth]{gw_txh_2cs_pos}
+       	\includegraphics[width=0.75\textwidth]{figures/gw_txh_2cs_pos}
   	\end{figure}
 }{}
 \date{}
