testing the subfiles

--- a/proposal.tex
+++ b/proposal.tex
@@ -62,8 +62,7 @@
 }{}
 \date{}
 
-\includeonly{tex/motivation}
-
+\includeonly{tex/thesis_statement}
 \begin{document}
 %=======================================================%
 
