Add 2015 AAS images

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -164,7 +164,7 @@ Quick summary of previous research
         \item Bounded control input and fixed time horizon
     \end{itemize}
     \begin{figure}
-        \includegraphics[width=0.7\textwidth]{moon_orbit}
+        \includegraphics[width=0.7\textwidth]{2015AAS/moon_orbit.pdf}
     \end{figure}
     
     \note[itemize]{
@@ -183,11 +183,11 @@ Quick summary of previous research
     \begin{figure} 
     \centering 
     \begin{subfigure}[htbp]{0.5\textwidth} 
-        \only<1-2>{\includegraphics[width=\textwidth]{reach_trajectory}  }
-        \visible<3->{\includegraphics[width=\textwidth]{reach_transfer}  }
+        \only<1-2>{\includegraphics[width=\textwidth]{2015AAS/reach_trajectory}  }
+        \visible<3->{\includegraphics[width=\textwidth]{2015AAS/reach_transfer}  }
     \end{subfigure}~
     \begin{subfigure}[htbp]{0.5\textwidth} 
-        \visible<2->{\includegraphics[width=\textwidth]{poincare_compare} }
+        \visible<2->{\includegraphics[width=\textwidth]{2015AAS/poincare_compare} }
     \end{subfigure} 
     \end{figure}
     
