Add alignment options

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -9,7 +9,7 @@
 \end{frame}
 
 % THESIS STATEMENT
-\begin{frame}{Proposed research}
+\begin{frame}[t]{Proposed research}
     \begin{itemize}
         \item Geometric mechanics enables the novel use low-thrust propulsion for operations about asteroids
         \begin{itemize}     
@@ -19,10 +19,10 @@
             \item Globally stable attitude controllers in the presence of obstacles
         \end{itemize}
     \end{itemize}
-\end{itemize}
 
 \end{frame}
-\begin{frame}{Proposed Approach} % -----------------------------------%
+
+\begin{frame}[t]{Proposed Approach} % -----------------------------------%
   \begin{itemize}
       \item \Emph{Reachability set} on \Poincare section allows for systematic transfer design
         \begin{itemize}
@@ -40,7 +40,7 @@
   }
 \end{frame} %--------------------------------------%
 
-\begin{frame}{Objective} %---------------------------------------%
+\begin{frame}[t]{Objective} %---------------------------------------%
 
   \begin{block}{Nonlinear Control Design}
     Design control input \( u \) that stabilizes system from initial attitude \( R_0 \) to desired attitude \( R_d \) while avoiding obstacles
