--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@
 }{}
 \date{}
 
-\includeonly{tex/conclusion}
+\includeonly{tex/timeline}
 
 \begin{document}
 %=======================================================%
