Correct tex root command

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,4 +1,4 @@
-%! Tex Root = ../proposal.tex
+% !TEX Root = ../proposal.tex
 
 \begin{frame}[t]\frametitle{Coupled Dynamics}
     Investigate the dynamics of coupled motion about asteroids
