Update timeline submodule

--- a/tex/timeline.tex
+++ b/tex/timeline.tex
@@ -1,20 +1,17 @@
 % !TEX Root = ../proposal.tex
 
 \begin{frame}[t]\frametitle{Proposed Timeline}
+\begin{center}
+    \includegraphics[width=\textwidth]{figures/timeline/timeline.pdf} 
+\end{center}
     
-\begin{itemize}
-    \item Future conference paper
-    \item Journal Submissions
-    \item Expected progress/tasks required for completion
-    \begin{itemize}
-        \item Derivation of coupled equations of motion
-        \item Investigation of dynamic enviornment of coupled problem
-        \item again look at the coupled translational/attitude obstacle problem
-        \item stability analysis
-        \item full mission scenario generation (orbital manuevers around asteroid to landing)
-        \item writing dissertation
-    \end{itemize}
-    \item Dissertation/Graduation Expectation
-\end{itemize}
-
 \end{frame}
+
+\note[itemize]{
+    \item Derive equations of motion
+    \item Simulate/investigate dynamics
+    \item Translational/Attitude obstacles
+    \item Stability/Control analysis
+    \item Full mission scenarios (mapping manuevers to landing)
+    \item Write dissertation
+}
