Add some directions for future work

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,11 +1,23 @@
 % !TEX Root = ../proposal.tex
+\section*{}
+\subsection*{Future Work}
 
-\begin{frame}[t]\frametitle{Coupled Dynamics}
-    Investigate the dynamics of coupled motion about asteroids
+\begin{frame}[t]\frametitle{Remaining Research}
 
-    Globally valid representation of system dynamics
-
-    Copmlex dynamics require accurate numerical simulation
-
-    Motion near surface requires ability to autonomously avoid obstacles
+    \begin{itemize}
+        \item Investigate the dynamics of coupled motion about asteroids
+        \begin{itemize}
+            \item Equations of motion of a rigid body near an asteroid
+            \item Stability/Behavior of motion
+        \end{itemize}
+        \item Effect of attitude coupling on translational motion
+        \begin{itemize}
+            \item Deviations over extended time spans
+            \item Differences in reachability set computations
+        \end{itemize}
+        \item Low alititude and landing trajectories
+        \begin{itemize}
+            \item Obstacle avoidance when near irregular surface
+        \end{itemize}
+    \end{itemize}
 \end{frame}
