Working on prior work slides and making sure they work

--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@
 }{}
 \date{}
 
-\includeonly{tex/timeline}
+\includeonly{tex/prior_work}
 
 \begin{document}
 %=======================================================%
