Include link to youtube instead of embedding the video

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -424,7 +424,7 @@ Attitude control in the presence of constraints
     \item Attached to spherical joint to allow only attitude dynamics
 \end{itemize}
 \begin{figure}
-\centering
-\movie[externalviewer,height=0.7\textheight]{\includegraphics[height=0.7\textheight]{hexrotor}}{experiment.mp4} 
+    \centering
+    \href{https://youtu.be/dsmAbwQram4?t=20s}{\includegraphics[height=0.7\textheight]{figures/2016ACC/hexrotor}}
 \end{figure}
 \end{frame}   %-----------------------------%
