Add detail on low thrust propulsion

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,12 +3,23 @@
 \section*{}
 \subsection*{Introduction}  
 
-\begin{frame}{Background } %-----------------------------%
+\begin{frame} %-----------------------------%
+\frametitle{Low-thrust vehicles} % electric propulsion
+\begin{itemize}
+    \item Low-thrust orbital transfers offer increased mission oportunities
+    \begin{itemize}
+        \item Electric propulsion is increasing in capability
+        \item Offers much higher specific impulse than chemical engines 
+        \item Requires much longer operating periods for maneuvers 
+        \item Enables long duration missions with frequent thrusting
+    \end{itemize}
+\end{itemize}
 
-Discuss some history of missions to asteroids
-
-Missions to asteroids
-
+\begin{center}
+    \includegraphics[height=0.4\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/patriot_plume.jpg}
+    ~
+    \includegraphics[height=0.4\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/deepspace1.jpg}
+\end{center}
 \end{frame}   %-----------------------------%
 
 \begin{frame}[t]\frametitle{Background - Low-thrust Propulsion}
