Add asteroid mission slide

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -22,21 +22,18 @@
 \end{center}
 \end{frame}   %-----------------------------%
 
-\begin{frame}[t]\frametitle{Background - Low-thrust Propulsion}
-    Low thrust propulsion systems
+\begin{frame}{Asteroid Missions}
+\begin{itemize}
+    \item Science - insight into the early formation of the solar system
+    \item Mining - vast quantities of useful materials
+    \item Impact - high risk from hazardous near-Earth asteroids
+\end{itemize}    
 
-    Electric propulsion systems
-
-    Differences between impulsive/non-impulsive systems
-\end{frame}
-
-\begin{frame}[t]{Motivation}
-    
-What can we gain by studying asteroids
-
-Why do spacecraft need to operate in their vicinity
-
-
+\begin{center}
+    \includegraphics[height=0.38\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/near_mos_20001203_full.jpg}
+    ~
+    \includegraphics[height=0.38\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/Itokawa8_hayabusa_1210.jpg}
+\end{center}
 \end{frame}
 
 \begin{frame}{Asteroid Mining}
