change path to images

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -44,9 +44,9 @@
     \begin{itemize}
         \item Electric propulsion has increased in popularity
 
-        \includegraphics[height=0.3\textheight]{patriot_plume}
+        \includegraphics[height=0.3\textheight]{figures/2016AAS/patriot_plume.jpg}
         \hfill
-        \includegraphics[height=0.3\textheight]{deepspace1}
+        \includegraphics[height=0.3\textheight]{figures/2016AAS/deepspace1.jpg}
  
         \item Offers much higher specific impulse than chemical engines 
         
@@ -74,9 +74,9 @@
 \end{itemize}
 
 \begin{center}
-    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/patriot_plume.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/patriot_plume.jpg}
     ~
-    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/deepspace1.jpg}
+    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/deepspace1.jpg}
 \end{center}
 \end{frame}   %-----------------------------%
 
