Working on the motivation section

--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@
 }{}
 \date{}
 
-\includeonly{tex/prior_work}
+\includeonly{tex/motivation}
 
 \begin{document}
 %=======================================================%
