Move motivation for asteroid missions to motivation file

--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -3,39 +3,30 @@
 \section*{}
 \subsection*{Motivation}  
 
-\begin{frame} %-----------------------------%
-\frametitle{Motivation - Small Satellites} % small satellites
-    \begin{itemize}
-        \item Spacecraft design/launch and development are costly endeavors
-            \begin{itemize}
-                \item Long development timelines with extensive component testing
-                \item Prohibitive launch costs and manifest scheduling
-            \end{itemize}
-            \pause
-                    
-        \begin{tabular}{l | c | c }
-            Vehicle & LEO Capacity (\si{\kilogram}) & LEO Cost per \si{\kilogram} \\
-            \hline \hline
-            Space Shuttle & \num{28803} & \$ \num{10416}  \\ 
-            Atlas 2A & \num{8618} & \$ \num{11314} \\
-            Falcon 9 & \num{13150} & \$ \num{4654} \\
-            Falcon 9 Heavy & \num{53000} & \$ \num{1698}
-        \end{tabular}
-        
-        \item Small spacecraft enable cost effective and rapid development
-    
-            \begin{itemize}
-                \item Reduced size/mass allows for `piggyback' on larger vehicles
-                \item Cheaper designs allow for mass production/standardization 
-            \end{itemize}
+% why go to asteroids
 
+\begin{frame}[t]{Why send spacecraft to asteroids?}
+    \begin{itemize}
+        \item Some properties only available at the asteroid:
+            \begin{itemize}
+                \item High fidelity gravitational model
+                \item Surface samples or return missions
+            \end{itemize}
+        \item Gain experience for future missions
+            \begin{itemize}
+                \item Weak gravitational field allows for less costly manuevers
+                \item Asteroid tours for future deep-space human missions
+            \end{itemize}
+        \item Avoiding future impacts
+            \begin{itemize}
+                \item Local spacecraft can aid in ground based tracking
+                \item Mitigation: Gravity tractors, kinetic impactors, solar sails etc.
+            \end{itemize}
     \end{itemize}
-    
-    \note[itemize]{
-        \item Small sats allow for reduced mass 
-        \item Small sats are more responsive and allow more new mission types
-    }
-\end{frame}   %-----------------------------%
+
+\end{frame}
+
+% Why use low thrust proplusion systems
 
 \begin{frame} %-----------------------------%
 \frametitle{Motivation - Low Thrust Transfers} % electric propulsion
