--- a/tex/motivation.tex
+++ b/tex/motivation.tex
@@ -71,19 +71,7 @@
 \end{center}
 \end{frame}   %-----------------------------%
 
-\begin{frame}{Asteroids}
-\begin{itemize}
-    \item Science - insight into the early formation of the solar system
-    \item Mining - vast quantities of useful materials
-    \item Impact - high risk from hazardous near-Earth asteroids
-\end{itemize}    
-
-\begin{center}
-    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/near_mos_20001203_full.jpg}
-    ~
-    \includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{figures/2016AAS/Itokawa8_hayabusa_1210.jpg}
-\end{center}
-\end{frame}
+% why study the coupled attitude/translational problem
 
 \begin{frame}[t]{Motivation} %-----------------------------%
 \begin{itemize}
