Combine intro and motivation into one

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,7 +60,7 @@
 }{}
 \date{}
 
-\includeonly{tex/motivation}
+\includeonly{tex/introduction}
 
 \begin{document}
 %=======================================================%
@@ -71,7 +71,6 @@
 \end{frame}   %-----------------------------%
 
 \include{tex/introduction}
-\include{tex/motivation}
 \include{tex/thesis_statement}
 \include{tex/lit_review}
 \include{tex/challenges}
