--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -66,3 +66,51 @@
 
 \end{frame}
 
+\subsection*{Spacecraft Autonomy}
+% why study the coupled attitude/translational problem
+
+\begin{frame}[t]{Spacecraft Autonomy} %-----------------------------%
+\begin{itemize}
+    \item Autonomous control of space vehicles is critical
+    \begin{itemize}
+        \item Avoid extensive planning and interaction by operators
+        \item Ability to operate safely with system uncertainty 
+        \item Independently navigate hazards and handle possible failures
+    \end{itemize}
+\end{itemize}
+\visible<2->{
+\begin{center}
+    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/hubble.jpg}~
+    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/ors-1.png}
+\end{center}
+}
+\end{frame}   %-----------------------------%
+
+% why go to asteroids
+
+\begin{frame}[t]{Why send spacecraft to asteroids?}
+    \begin{itemize}
+        \item Some properties only available at the asteroid:
+            \begin{itemize}
+                \item High fidelity gravitational model
+                \item Surface samples or return missions
+            \end{itemize}
+        \item Gain experience for future missions
+            \begin{itemize}
+                \item Weak gravitational field allows for less costly manuevers
+                \item Asteroid tours for future deep-space human missions
+            \end{itemize}
+        \item Avoiding future impacts
+            \begin{itemize}
+                \item Local spacecraft can aid in ground based tracking
+                \item Mitigation: Gravity tractors, kinetic impactors, solar sails
+            \end{itemize}
+    \end{itemize}
+
+\begin{center}
+    \includegraphics[width=0.5\textwidth,height=0.2\textheight,keepaspectratio]{figures/osires_rex.png}
+    ~
+    \includegraphics[width=0.5\textwidth,height=0.2\textheight,keepaspectratio]{figures/Rosetta-and-Philae.jpg}
+\end{center}
+
+\end{frame}
