--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section*{}
-\subsection*{Introduction}  
+\section*{Introduction}
+\subsection*{Electric Propulsion}  
 
 \begin{frame} %-----------------------------%
 \frametitle{Low-thrust vehicles} % electric propulsion
@@ -21,6 +21,8 @@
     \includegraphics[height=0.4\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/deepspace1.jpg}
 \end{center}
 \end{frame}   %-----------------------------%
+
+\subsection*{Investigate Asteroids}
 
 \begin{frame}{Asteroid Missions}
 \begin{itemize}
