--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -22,7 +22,7 @@
 \end{center}
 \end{frame}   %-----------------------------%
 
-\subsection*{Investigate Asteroids}
+\subsection*{Asteroid Missions}
 
 \begin{frame}{Asteroid Missions}
 \begin{itemize}
