Move osires rex image to autonomy slide

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -83,7 +83,7 @@
 \visible<2->{
 \begin{center}
     \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/hubble.jpg}~
-    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/ors-1.png}
+    \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/osires_rex.png}
 \end{center}
 }
 \end{frame}   %-----------------------------%
@@ -109,10 +109,8 @@
             \end{itemize}
     \end{itemize}
 
-\begin{center}
-    \includegraphics[width=0.5\textwidth,height=0.2\textheight,keepaspectratio]{figures/osires_rex.png}
-    ~
-    \includegraphics[width=0.5\textwidth,height=0.2\textheight,keepaspectratio]{figures/Rosetta-and-Philae.jpg}
-\end{center}
+    % \begin{center}
+    %     \includegraphics[width=0.5\textwidth,height=0.2\textheight,keepaspectratio]{figures/Rosetta-and-Philae.jpg}
+    % \end{center}
 
 \end{frame}
