Step through itemize

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -91,7 +91,7 @@
 % why go to asteroids
 
 \begin{frame}[t]{Why send spacecraft to asteroids?}
-    \begin{itemize}
+    \begin{itemize}[<+->]
         \item Some properties only available at the asteroid:
             \begin{itemize}
                 \item High fidelity gravitational model
