Remove serif fonts

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,7 +1,7 @@
 %\documentclass[11pt,professionalfonts,hyperref={pdftex,pdfpagemode=none,pdfstartview=FitH}]{beamer}
 %\usepackage{times}
 \documentclass[11pt,professionalfonts]{beamer}
-\usefonttheme{serif}
+% \usefonttheme{serif}
 \usepackage{presentation_packages}
 
 \DeclareSIUnit\year{yr} % 2016AAS
