Working on thesis statement slides

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,7 @@
 }{}
 \date{}
 
-\includeonly{tex/introduction}
+\includeonly{tex/thesis_statement}
 
 \begin{document}
 %=======================================================%
