Change title of thesis section

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -1,14 +1,9 @@
 % !TEX Root = ../proposal.tex
 
-\begin{frame}[t]{Research Objective}
-    
-    Thesis statement
+\section*{Research Description}
+\subsection*{Thesis}
 
-    Entire dissertation should support and prove this statement
-
-\end{frame}
-
-% THESIS STATEMENT
+% THESIS STATEMENT - entire dissertation should support and defend this statement
 \begin{frame}[t]{Proposed research}
     \begin{itemize}
         \item Geometric mechanics enables the novel use low-thrust propulsion for operations about asteroids
