Collapse into a challenges file
Discuss previous approaches and their problems

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,7 @@
 }{}
 \date{}
 
-\includeonly{tex/thesis_statement}
+\includeonly{tex/challenges}
 
 \begin{document}
 %=======================================================%
@@ -71,7 +71,6 @@
 
 \include{tex/introduction}
 \include{tex/thesis_statement}
-\include{tex/lit_review}
 \include{tex/challenges}
 \include{tex/prior_work}
 \include{tex/future_work}
