Add first two sections to testing

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,9 @@
 }{}
 \date{}
 
-\includeonly{tex/thesis_statement}
+\includeonly{
+    tex/introduction,
+    tex/thesis_statement}
 
 \begin{document}
 %=======================================================%
