# This is a combination of 2 commits. # This is the 1st commit message:
Add first two sections to testing

# This is the commit message #2:

Merging intro, thesis, and challenges

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,10 @@
 }{}
 \date{}
 
-\includeonly{tex/thesis_statement}
+\includeonly{
+    tex/introduction,
+    tex/thesis_statement,
+    tex/challenges}
 
 \begin{document}
 %=======================================================%
