--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -30,31 +30,28 @@
 \end{itemize}
 \end{frame}   %-----------------------------%
 
-\begin{frame}{Gravitational Modeling} %-----------------------------%
+\begin{frame}
+\frametitle{Gravitational Modeling}
+\begin{block}{Centrobaric Body}
+    \( F = -\frac{G m_1 m_2}{R^2} \hat{a}_1 \) for all particles outside of body
+\end{block}
 
 \begin{itemize}
-  \item Asteroids are extended bodies not point masses
-  \pause
-  \item Spherical Harmonic - only valid outside of circumscribing sphere
-    {
-    \small
-    \begin{align*}
-      U(\vecbf{r} ) = \frac{\mu}{r} \sum_{n=0}^\infty \sum_{m=0}^\infty \parenth{\frac{R}{r}}^nP_{n,m}(\sin \phi) \braces{ C_{nm} \cos(m \lambda) + S_{nm} \sin(m \lambda)} 
-    \end{align*}
-    }
-    \pause
-  \item Infinite series is an approximation and adds complexity
-    \begin{itemize}
-        \item Model switching at circumscribing sphere
-        \item Coefficient matching used to ensure continuity 
-    \end{itemize}
+    \item<2-> Only applies to spherically symmetric bodies 
+    \item<3-> Unknown or possibly changing mass distributions
+    \item<4-> Can derive a \Emph{Gravity Model} using accurate tracking of SC
 \end{itemize}
-
+\only<4>{
+\[
+    U = \frac{\mu}{r} \sum_{n=0}^\infty \sum_{m=0}^\infty \parenth{\frac{R}{r}}^nP_{n,m}(\sin \phi) \braces{ C_{nm} \cos(m \lambda) + S_{nm} \sin(m \lambda)} 
+\]
+}
 \note[itemize]{
-  \item Models require detailed data from orbit about asteroid (OD process determines gravity field)
-  \item Simplified models (triaxial ellipsoid allows analytical insight)
-  \item Previous work fails to consider coupled dyanmics
-  }
+    \item Models require detailed data from orbit about asteroid (OD process determines gravity field)
+    \item Simplified models (triaxial ellipsoid allows analytical insight)
+    \item Previous work fails to consider coupled dyanmics
+    }
+\end{frame}
 
 \end{frame}   %-----------------------------%
 
