Add some backup/appendix slides

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,9 +60,7 @@
 \date{}
 
 \includeonly{
-    tex/introduction,
-    tex/thesis_statement,
-    tex/challenges}
+    tex/appendix}
 
 \begin{document}
 %=======================================================%
@@ -79,7 +77,7 @@
 \include{tex/future_work}
 \include{tex/timeline}
 \include{tex/conclusion}
-\include{tex/backup}
+\include{tex/appendix}
 
 
 
